--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next003",
+  "name": "lesson1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-icons": "^5.3.0",
+    "react-stars": "^2.2.5",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "postcss": "^8",
